<?xml version="1.0" encoding="utf-8"?>
<!--
 	strings.xml: Definitions of locale-sensitive strings.
 	
 	© 2011 Christopher E. Granade (cgranade@gmail.com).
	 
	This file is part of Shadowtable.
	Shadowtable is free software: you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
 	the Free Software Foundation, either version 3 of the License, or
 	(at your option) any later version.

	Shadowtable is distributed in the hope that it will be useful,
 	but WITHOUT ANY WARRANTY; without even the implied warranty of
 	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 	GNU General Public License for more details.
 
 	You should have received a copy of the GNU General Public License
 	along with Shadowtable.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_title"><tt>Shadowtable</tt></string>
    <string name="damageHeader">Apply Damage</string>
    <string name="turnInfoHeader">Turn Info</string>
    <string name="curTurnLabel">Current Turn:</string>
    <string name="curIPLabel">Current IP:</string>
    <string name="newTurnBtn">Next Turn</string>
    <string name="add_btn">Add</string>
    <string name="name">Name</string>
    <string name="inittype_phys">Physical</string>
    <string name="inittype_astr">Astral</string>
    <string name="inittype_matr">Matrix</string>
    <string name="prefcat_init_policies">Initiative Order Policies</string>
    <string name="inittype_phys_header">Initiative(<i>Physical</i>)</string>
    
    <string name="dmgtype_phys">Physical</string>
    <string name="dmgtype_stun">Stun</string>
</resources>

